[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "google_analytics_data_json"
version = "0.0.2.4"
authors = [
  { name="Daniel Jerrehian", email="danieljerrehian@gmail.com" },
]
description = "A package to simplify fetching and transforming data from the Google Analytics Data GA4 API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'cachetools>=5.2.0,<7',
  'certifi',
  'charset-normalizer>=2.1.0',
  'google-analytics-data>=0.12.1,<1',
  'google-api-python-client>=2.86.0,<3',
  'grpcio>=1.47,<2',
  'idna>=3.3,<4',
  'proto-plus>=1.20.6,<2',
  'protobuf>=3.20.1,<4',
  'requests>=2.28.1',
  'rsa>=4.8',
  'six>=1.16.0',
]

[project.optional-dependencies]
dev = [
  'python-dotenv<1'
]

[project.urls]
"Homepage" = "https://github.com/DanielJerrehian/google_analytics_data_json"
"Bug Tracker" = "https://github.com/DanielJerrehian/google_analytics_data_json/issues"
